--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -2,19 +2,24 @@
 
 .header {
   width: 75%;
-  height: 83px;
+  // height: 83px;
   box-sizing: border-box;
-  background-color: white;
+  background-color: $white;
   margin: 0 auto;
 
   &__logo-container {
     float: left;
-    height: 100%;
   }
 
   &__navigation-container {
     float: right;
-    height: 100%;
+  }
+
+  &::after {
+    color: red;
+    content: '';
+    display: block;
+    clear: both;
   }
 }
 
