--- a/src/components/__shared/css/base.scss
+++ b/src/components/__shared/css/base.scss
@@ -4,12 +4,11 @@ html, body {
   height: 100%;
   width: 100%;
   user-select: none;
-  overflow: hidden;
 }
 
 body {
   font: 16px arial, sans-serif;
-  background-color: white;
+  background-color: $white;
 }
 
 .hidden {
