--- a/src/components/logo/style.scss
+++ b/src/components/logo/style.scss
@@ -1,10 +1,11 @@
 @import 'components/__shared/css/variables.scss';
 
 .logo {
-  background-color: white;
-  height: 100%;
+  background-color: $white;
+  height: 75px;
 
   &__button {
+    background-color: $white;
     height: 100%;
     cursor: pointer;
   }
