--- a/src/components/forms/form-create-speaker/style.scss
+++ b/src/components/forms/form-create-speaker/style.scss
@@ -14,6 +14,9 @@
   &__about-container, {
     margin-bottom: 15px;
   }
+  &__about-container {
+    height: 200px;
+  }
   &__submit-container {
     margin-top: 25px;
   }
