--- a/src/components/pages/main/style.scss
+++ b/src/components/pages/main/style.scss
@@ -1,5 +1,10 @@
 .page {
 
+  &__header-container {
+    width: 75%;
+    margin: 0 auto;
+  }
+
   &__main-section-container {
     width: 100%;
     background-image: url(<%publicPathFrontEnd%>/img/main-section.png);
