--- a/src/components/__shared/button/button-default.scss
+++ b/src/components/__shared/button/button-default.scss
@@ -1,6 +1,6 @@
 @import 'components/__shared/css/variables.scss';
 
-.button-submit {
+.button-default {
   font-size: 100%;
   padding: 10px 16px;
   background-color: $orange;
