--- a/src/components/buttons/button-submit/template.hbs
+++ b/src/components/buttons/button-submit/template.hbs
@@ -1,4 +1,4 @@
 <input type="submit"
        value="{{value}}"
-       class="button button-submit"
+       class="button button-default"
        data-component="{{componentName}}">
