--- a/src/components/pages/registration-speaker/style.scss
+++ b/src/components/pages/registration-speaker/style.scss
@@ -7,9 +7,10 @@ html, body {
 .page {
   width: 100%;
   height: 100%;
-  
+
   &__header-container {
-    width: 100%;
+    width: 75%;
+    margin: 0 auto;
   }
 
   &__main-container {
