--- a/src/components/forms/form-add-session/template.hbs
+++ b/src/components/forms/form-add-session/template.hbs
@@ -40,4 +40,7 @@
   <div class="form-add-session__submit-container"
        data-element="form-add-session__submit-container">
   </div>
+  <div class="form-add-session__button-cancel-container"
+       data-element="form-add-session__button-cancel-container">
+  </div>
 </form>
