feature: add session-remove

--- a/src/components/__shared/button/button-default.scss
+++ b/src/components/__shared/button/button-default.scss
@@ -11,8 +11,8 @@
     background-color: $darkOrange;
     cursor: pointer;
   }
-}
 
-.button-cancel {
-  background-color: gray;
+  &_color-gray {
+    background-color: gray;
+  }
 }
