--- a/src/components/buttons/button-default/template.hbs
+++ b/src/components/buttons/button-default/template.hbs
@@ -1,4 +1,4 @@
-<button class="{{componentName}} button-default"
+<button class="{{className}} button-default"
         data-component="{{componentName}}">
   {{value}}
 </button>
