feature: add search sessions

--- a/src/components/inputs/select/template.hbs
+++ b/src/components/inputs/select/template.hbs
@@ -2,7 +2,7 @@
         data-component="select-{{componentName}}"
         id="{{componentName}}">
   {{#if disableFirst}}
-    <option disabled selected></option>
+    <option disabled selected>Выберите категорию</option>
   {{/if}}
   {{#each categories}}
     <option value="{{value}}">{{content}}</option>
