feature: add sort public session

--- a/src/components/__shared/css/variables.scss
+++ b/src/components/__shared/css/variables.scss
@@ -1,6 +1,7 @@
 $white: rgb(252, 252, 252);
 $gray: rgb(140, 140, 140);
 $light-gray: rgb(243, 243, 243);
+$very-light-gray: rgb(247, 247, 247);
 $red: rgb(255, 119, 116);
 $red-intense: rgb(219, 63, 53);
 $blue: rgb(10, 136, 225);
