--- a/src/components/__shared/base-input/style.scss
+++ b/src/components/__shared/base-input/style.scss
@@ -13,10 +13,10 @@
     right: solid 1px rgb(220, 220, 220);
     bottom: solid 1px rgb(220, 220, 220);
   }
-  -webkit-appearance: none;
+  // -webkit-appearance: none;
   border-radius: 2px;
   box-sizing: border-box;
-  background-color: rgb(245, 245, 245);
+  background-color: $white;
 
   &:focus {
     outline: none;
