feature: add my questions(first implementation)

--- a/src/components/__shared/button/button-default.scss
+++ b/src/components/__shared/button/button-default.scss
@@ -1,6 +1,7 @@
 @import 'components/__shared/css/variables.scss';
 
 .button-default {
+  display: inline-block;
   font-size: 100%;
   padding: 10px 16px;
   background-color: $orange;
