--- a/src/components/inputs/textarea/template.hbs
+++ b/src/components/inputs/textarea/template.hbs
@@ -1,3 +1,6 @@
 <textarea class="textarea textarea-{{componentName}}"
           data-component="textarea-{{componentName}}"
-          id="{{componentName}}">
+          id="{{componentName}}"
+          {{#if placeholder }}
+            placeholder="{{placeholder}}"
+          {{/if}}>
