--- a/src/components/__shared/base-input/style.scss
+++ b/src/components/__shared/base-input/style.scss
@@ -3,7 +3,8 @@
 .input,
 .textarea,
 .select {
-  font-size: 100%;
+  font-size: 120%;
+  line-height: 140%;
   width: 100%;
   height: 42px;
   padding-left: 5px;
