--- a/src/components/tip-inline/template.hbs
+++ b/src/components/tip-inline/template.hbs
@@ -1,3 +1,3 @@
-<div class="tip-inline"
-     data-component="{{componentName}}">
+<div class="tip-inline tip-inline-{{componentName}}"
+     data-component="tip-inline-{{componentName}}">
 </div>
