--- a/src/components/questions/my-question-list/style.scss
+++ b/src/components/questions/my-question-list/style.scss
@@ -1,11 +1,5 @@
 .my-question-list {
-
-  &__describe {
-    margin-top: 60px;
-    font-size: 180%;
-  }
-
   &__list-container {
-    margin-top: 100px;
+    // margin-top: 100px;
   }
 }
