--- a/src/components/questions/my-questions/template.hbs
+++ b/src/components/questions/my-questions/template.hbs
@@ -1,7 +1,13 @@
 <div class="my-questions"
      data-component="my-questions">
+  <div class="my-questions__title-container"
+       data-element="my-questions__title-container">
+  </div>
   <div class="my-questions__question-list-container"
        data-element="my-questions__question-list-container">
+  </div>
+  <div class="my-questions__page-navigation-container"
+       data-element="my-questions__page-navigation-container">
   </div>
   <div class="my-questions__question-details-container"
        data-element="my-questions__question-details-container">
