--- a/src/components/__shared/page-login-registration/style.scss
+++ b/src/components/__shared/page-login-registration/style.scss
@@ -9,8 +9,8 @@ html, body {
   height: 100%;
 
   &__header-container {
-    width: 75%;
-    margin: 0 auto;
+    height: 75px;
+    width: 100%;
   }
 
   &__main-container {
