--- a/src/components/buttons/button-submit/template.hbs
+++ b/src/components/buttons/button-submit/template.hbs
@@ -1,4 +1,7 @@
-<input type="submit"
-       value="{{value}}"
-       class="button button-default"
-       data-component="{{componentName}}">
+<div class="{{className}}"
+     data-component="{{componentName}}">
+  <input type="submit"
+        value="{{value}}"
+        class="button {{className}}__button"
+        data-element="{{componentName}}__button">
+</div>
