--- a/src/components/pages/my-questions/style.scss
+++ b/src/components/pages/my-questions/style.scss
@@ -1,12 +1,15 @@
 .page {
 
-  &__header-container,
-  &__my-questions-container {
-    width: 75%;
-    margin: 0 auto;
+  &__header-container {
+    width: 100%;
+    height: 75px;
   }
 
-  &__main-section-container {
+  &__my-questions-container {
+    width: 100%;
+  }
+
+  &__main-block-container {
     width: 100%;
     background-image: url(<%publicPathFrontEnd%>/img/kource-web-design.png);
     background-repeat: no-repeat;
