--- a/src/components/pages/public-session-details/style.scss
+++ b/src/components/pages/public-session-details/style.scss
@@ -3,8 +3,8 @@
 .page {
 
   &__header-container {
-    width: 75%;
-    margin: 0 auto;
+    height: 75px;
+    width: 100%;
   }
 
   &__public-session-details-container {
