--- a/src/components/questions/my-questions/style.scss
+++ b/src/components/questions/my-questions/style.scss
@@ -1,7 +1,27 @@
+@import 'components/__shared/css/variables.scss';
+
 .my-questions {
   margin-bottom: 150px;
 
+  &__title-container {
+    width: 100%;
+    background-color: $very-light-gray;
+  }
+
   &__question-list-container {
-    margin: 50px 0;
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 60px;
+  }
+
+  &__page-navigation-container {
+    margin-top: 50px;
+    width: 100%;
+    text-align: center;
+  }
+
+  &__question-details-container {
+    width: 100%;
+    margin: 0 auto;
   }
 }
