feature: add my-request components

--- a/src/components/my-title/style.scss
+++ b/src/components/my-title/style.scss
@@ -1,9 +1,9 @@
 @import 'components/__shared/css/variables.scss';
 
-.my-question-title {
-  color: $black;
+.my-title {
+  color: $light-black;
   width: 75%;
   margin: 0 auto;
-  font-size: 180%;
-  padding: 50px 0;
+  font-size: 150%;
+  padding: 25px 0;
 }
