--- a/src/components/__shared/css/variables.scss
+++ b/src/components/__shared/css/variables.scss
@@ -8,6 +8,7 @@ $blue: rgb(10, 136, 225);
 $light-blue: rgb(54, 169, 234);
 $yellow: rgb(251, 251, 188);
 $black: rgb(20, 20, 20);
+$light-black: rgb(40, 40, 40);
 $orange: rgb(246, 142, 86);
 $darkOrange: rgb(160, 56, 0);
 $background-gradient: linear-gradient(25deg, rgb(122, 202, 252) 0%, rgb(52, 176, 255) 25%, rgb(46, 180, 255) 25.05%, rgb(86, 192, 254) 75%, rgb(113, 198, 252) 75.01%, rgb(183, 223, 249));
