--- a/src/components/pages/my-requests/style.scss
+++ b/src/components/pages/my-requests/style.scss
@@ -1,21 +1,19 @@
-@import 'components/__shared/css/variables.scss';
-
 .page {
 
   &__header-container {
+    width: 100%;
     height: 75px;
+  }
+
+  &__my-questions-container {
     width: 100%;
   }
 
   &__main-block-container {
     width: 100%;
-    background-image: url(<%publicPathFrontEnd%>/img/main-block.png);
+    background-image: url(<%publicPathFrontEnd%>/img/kource-web-design.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
-  }
-
-  &__public-session-details-container {
-    width: 100%;
   }
 }
