--- a/src/components/questions/my-questions-details/style.scss
+++ b/src/components/questions/my-questions-details/style.scss
@@ -1,21 +1,47 @@
 @import 'components/__shared/css/variables.scss';
 
-.my-questions-details {
+.my-question-details {
+
+  &__session-title-wraper {
+    background-color: $light-gray;
+
+    .my-question-details__session-title-container {
+      width: 75%;
+      margin: 0 auto;
+      padding-top: 40px;
+    }
+  }
+
+  &__question-container,
+  &__session-container,
+  &__about-speaker-container {
+    width: 75%;
+    margin: 0 auto;
+    padding: 30px 0;
+    border-bottom: 1px solid lightgray;
+  }
+
   &__question-container {
-    border-bottom: 3px solid $light-gray;
     margin-top: 40px;
-    padding-bottom: 20px;
   }
 
-  &__question-title {
-    font-size: 140%;
-    font-weight: bold;
+  &__status-question-wraper {
+    border-bottom: 1px solid lightgray;
+    background-color: $light-gray;
+
+    .my-question-details__status-question-container {
+      width: 75%;
+      margin: 0 auto;
+      padding: 15px 0 30px 0;
+      border-bottom: none;
+    }
   }
 
-  &__question {
-    text-indent: 1.5rem;
-    font-size: 120%;
-    line-height: 140%;
-    margin-top: 20px;
+
+  &__button-back-wraper {
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 30px;
+    text-align: center;
   }
 }
