feature: add record component(first implementation)

--- a/src/components/__shared/button/base-button-event/template.hbs
+++ b/src/components/__shared/button/base-button-event/template.hbs
@@ -2,9 +2,9 @@
      data-component="{{componentName}}">
   <button class="button {{className}}__button
           {{#if modifierClassName}}
-            {{className}}__button_{{modifierClassName}}
+            {{modifierClassName}}
           {{/if}}"
-         data-element="{{componentName}}__button">
+          data-element="{{componentName}}__button">
    {{value}}
   </button>
 </div>
