--- a/src/components/requests/my-list-item/style.scss
+++ b/src/components/requests/my-list-item/style.scss
@@ -37,5 +37,9 @@
       display: inline-block;
       vertical-align: bottom;
     }
+
+    .my-list-item__button-reject-container {
+      margin-top: 7px;
+    }
   }
 }
