feature: add functional the video response

--- a/src/components/__shared/css/variables.scss
+++ b/src/components/__shared/css/variables.scss
@@ -1,4 +1,5 @@
 $white: rgb(252, 252, 252);
+$green: green;
 $gray: rgb(140, 140, 140);
 $light-gray: rgb(243, 243, 243);
 $very-light-gray: rgb(247, 247, 247);
