--- a/src/components/requests/my-list-item/template.hbs
+++ b/src/components/requests/my-list-item/template.hbs
@@ -5,6 +5,12 @@
   <div class="my-list-item__navigation-container"
        data-element="my-list-item__navigation-container">
     <div class="my-list-item__buttons-container">
+      <div class="my-list-item__button-send-container"
+           data-element="my-list-item__button-send-container">
+      </div>
+      <div class="my-list-item__button-download-container"
+           data-element="my-list-item__button-download-container">
+      </div>
       <div class="my-list-item__button-response-container"
            data-element="my-list-item__button-response-container">
       </div>
