feture: add fetch polyfill

--- a/src/components/stream/template.hbs
+++ b/src/components/stream/template.hbs
@@ -3,7 +3,8 @@
   <div class="stream__video-container"
        data-element="stream__video-container">
     <video class="stream__video"
-           data-element="stream__video">
+           data-element="stream__video"
+           muted>
     </video>
   </div>
   <div class="stream__button-record-container"
