feature: add upload video

--- a/src/components/requests/my-list-item/template.hbs
+++ b/src/components/requests/my-list-item/template.hbs
@@ -8,6 +8,9 @@
       <div class="my-list-item__button-send-container"
            data-element="my-list-item__button-send-container">
       </div>
+      <div class="my-list-item__button-upload-container"
+           data-element="my-list-item__button-upload-container">
+      </div>
       <div class="my-list-item__button-download-container"
            data-element="my-list-item__button-download-container">
       </div>
