--- a/src/components/requests/my-list-item/style.scss
+++ b/src/components/requests/my-list-item/style.scss
@@ -1,6 +1,6 @@
 .my-list-item {
   margin: 15px 0 20px 0;
-  height: 200px;
+  height: 250px;
   border-bottom: solid 1px lightgray;
 
   &__content {
@@ -22,7 +22,7 @@
 
   &__navigation-container {
     float: right;
-    height: 180px;
+    height: 230px;
     display: inline-block;
     padding-left: 20px;
 
@@ -41,6 +41,7 @@
     .my-list-item__button-send-container,
     .my-list-item__button-reject-container,
     .my-list-item__button-download-container,
+    .my-list-item__button-upload-container,
     .my-list-item__button-response-container {
       margin-top: 7px;
       width: 150px;
