feature: add play-user page

--- a/src/components/play-user/template.hbs
+++ b/src/components/play-user/template.hbs
@@ -1,6 +1,6 @@
-<div class="play-speaker"
-     data-component="play-speaker">
-  <iframe class="play-speaker__iframe"
+<div class="play-user"
+     data-component="play-user">
+  <iframe class="play-user__iframe"
           id="ytplayer"
           type="text/html"
           width="720"
