--- a/src/components/requests/my-list-item/style.scss
+++ b/src/components/requests/my-list-item/style.scss
@@ -42,7 +42,9 @@
     .my-list-item__button-reject-container,
     .my-list-item__button-download-container,
     .my-list-item__button-upload-container,
-    .my-list-item__button-response-container {
+    .my-list-item__button-response-container,
+    .my-list-item__button-play-container,
+    .my-list-item__upload-progress-container {
       margin-top: 7px;
       width: 150px;
     }
