--- a/src/components/requests/my-list-item/template.hbs
+++ b/src/components/requests/my-list-item/template.hbs
@@ -20,6 +20,9 @@
       <div class="my-list-item__button-reject-container"
            data-element="my-list-item__button-reject-container">
       </div>
+      <div class="my-list-item__upload-progress-container"
+           data-element="my-list-item__upload-progress-container">
+      </div>
     </div>
   </div>
 
