feature: add email confirm

--- a/src/components/forms/form-registration/style.scss
+++ b/src/components/forms/form-registration/style.scss
@@ -1,7 +1,13 @@
 @import 'components/__shared/css/variables.scss';
 
 .form-registration {
-  padding-bottom: 200px;
+  &__describe {
+    font-size: 125%;
+    color: $black;
+    margin-bottom: 20px;
+    cursor: default;
+    text-align: center;
+  }
   &__name-container {
     margin-bottom: 8px;
   }
