--- a/src/components/forms/form-registration/template.hbs
+++ b/src/components/forms/form-registration/template.hbs
@@ -1,3 +1,6 @@
+<h1 class="form-registration__describe">
+  Создание Аккаунта
+</h1>
 <form class="form-registration"
       data-component="form-registration">
 
