--- a/src/components/tip-inline/style.scss
+++ b/src/components/tip-inline/style.scss
@@ -2,13 +2,14 @@
 
 .tip-inline {
   color: $red-intense;
-  font-size: 80%;
-}
-
-.tip-inline-ask {
   font-size: 100%;
 }
-
+.tip-inline_font-smal {
+  font-size: 80%;
+}
 .tip-inline_color-green {
   color: green;
+}
+.tip-inline_color-black {
+  color: $black;
 }
