--- a/src/components/forms/form-login/style.scss
+++ b/src/components/forms/form-login/style.scss
@@ -2,6 +2,14 @@
 
 .form-login {
   padding-bottom: 250px;
+
+  &__describe {
+    font-size: 125%;
+    color: $black;
+    margin-bottom: 20px;
+    cursor: default;
+    text-align: center;
+  }
   &__email-container {
     margin-bottom: 8px;
   }
