--- a/src/components/play-user/template.hbs
+++ b/src/components/play-user/template.hbs
@@ -5,7 +5,7 @@
           type="text/html"
           width="720"
           height="480"
-          src="http://www.youtube.com/embed/{{id}}?&rel=0"
+          src="https://www.youtube.com/embed/{{id}}?&rel=0"
           frameborder="0"
           allowfullscreen="allowfullscreen"
           mozallowfullscreen="mozallowfullscreen"
