--- a/src/components/registration/template.hbs
+++ b/src/components/registration/template.hbs
@@ -2,11 +2,11 @@
      data-component="registration">
   <div class="registration__main-container"
        data-element="registration__main-container">
+   <h1 class="registration__describe">
+     Создание Аккаунта
+   </h1>
     <div class="registration__form-container"
          data-element="registration__form-container">
-    </div>
-    <div class="registration__tip-confirm-message-container"
-         data-element="registration__tip-confirm-message-container">
     </div>
   </div>
 </div>
