--- a/src/components/registration/style.scss
+++ b/src/components/registration/style.scss
@@ -1,12 +1,10 @@
 
 .registration {
+  &__main-container {
+    padding-bottom: 200px;
+  }
 
   &__main-container_width-wide {
     width: 700px;
-    padding-bottom: 50px;
-  }
-
-  &__tip-confirm-message-container {
-    padding-bottom: 100px;
   }
 }
