feature: add component sessions

--- a/src/components/admin/admin-about-speaker/template.hbs
+++ b/src/components/admin/admin-about-speaker/template.hbs
@@ -1,39 +1,49 @@
 <div class="about-speaker"
      data-component="about-speaker">
 
-  <div class="about-speaker__container"
-       data-element="about-speaker__container">
-    <p class="about-speaker__speaker-name">
-      {{firstname}} {{lastname}}
-    </p>
+   <div class="about-speaker__about-container"
+        data-element="about-speaker__about-container">
 
-    <div class="about-speaker__category"
-         data-element="about-speaker__category">
-      <span>Категории:</span>
-      {{#each categories}}
-        {{content}},
-      {{/each}}
+     <p class="about-speaker__speaker-name">
+       {{firstname}} {{lastname}}
+     </p>
+
+     <div class="about-speaker__category"
+          data-element="about-speaker__category">
+       <span>Категории:</span>
+       {{#each categories}}
+         {{content}}
+       {{/each}}
+     </div>
+
+     <div class="about-speaker__status-container"
+          data-element="about-speaker__status-container">
+     </div>
+
+     {{#if numberResponses}}
+       <div class="about-speaker__number-responses"
+            data-element="about-speaker__number-responses">
+         <span>Количество ответов:</span> {{numberResponses}}
+       </div>
+     {{/if}}
+     <p class="about-speaker__about-title">
+       О спикер
+     </p>
+     <p class="about-speaker__about"
+        data-element="about-speaker__about">
+       {{about}}
+     </p>
+   </div>
+
+  <div class="about-speaker__sessions-container"
+       data-element="about-speaker__sessions-container">
+    <p class="about-speaker__sessions-title">
+      Список сесиий
+    </p>
+    <div class="about-speaker__sessions-list-container"
+         data-element="about-speaker__sessions-list-container">
     </div>
-
-
-    {{#if numberOfResponses}}
-      <div class="about-speaker__number-responses"
-           data-element="about-speaker__number-responses">
-        <span>Количество ответов:</span> {{numberOfResponses}}
-      </div>
-    {{/if}}
-
-    <p class="about-speaker__about"
-       data-element="about-speaker__about">
-      {{about}}
-    </p>
-
-    {{#each sessions}}
-      <div class="speaker-list__item-container"
-           data-element="speaker-list__item-container"
-           data-speakerId="{{speakerId}}">
-      </div>
-    {{/each}}
   </div>
+
 
 </div>
