--- a/src/components/registration-speaker/style.scss
+++ b/src/components/registration-speaker/style.scss
@@ -17,4 +17,9 @@
     display: inline-block;
     text-align: left;
   }
+
+  &__main-container_width-wide {
+    margin-top: 100px;
+    width: 700px;
+  }
 }
