--- a/src/components/forms/form-create-speaker/template.hbs
+++ b/src/components/forms/form-create-speaker/template.hbs
@@ -27,6 +27,17 @@
   {{/if}}
 
 
+
+  <label class="form-label form-create-speaker__label">
+  Ваша фотография <span>(максимуи 600 X 600)</span>
+  </label>
+  <div class="form-create-speaker__tip-container"
+       data-element="form-create-speaker__tip-add-avatar-container">
+  </div>
+  <div class="form-create-speaker__add-avatar-container"
+       data-element="form-create-speaker__add-avatar-container">
+  </div>
+
   <label class="form-label form-create-speaker__label"
          for="firstname">
   Имя
