--- a/src/components/inputs/textarea-trim/template.hbs
+++ b/src/components/inputs/textarea-trim/template.hbs
@@ -1,7 +1,8 @@
-<textarea class="textarea textarea-{{componentName}}"
-          data-component="textarea-{{componentName}}"
+<textarea class="textarea textarea-trim"
+          data-component="textarea-trim-{{componentName}}"
           id="{{componentName}}"
           {{#if placeholder }}
             placeholder="{{placeholder}}"
           {{/if}}>
+{{value}}
 </textarea>
